<resources>
    <string name="app_name">Kotlin Quiz</string>
    <string name="account">Don\'t you have an account yet? <font color="#5b39c6"><b><u><i>Sign Up</i></u></b></font> </string>
    <string name="forgot_password"><u>I forgot my password </u> </string>
    <string name="consult_only_with_a_ndoctor_you_trust">Every question is a chance to <font color="#1FC29D">\nLearn Something New </font></string>
    <string name="quiz_icon">Quiz Icon</string>
    <string name="reset_icon">Reset Icon</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_registered_email_to_receive_reset_instructions">Enter your registered email to receive reset instructions.</string>
    <string name="email">Email</string>
    <string name="reset_password1">Reset Password</string>
    <string name="password">Password</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">OR</string>
    <string name="signup_prompt">Don\'t have an account? Sign Up</string>



</resources>